@@ -41,8 +41,17 @@ public class OsProcessLauncher extends ProcessLauncher<Process> {
    private static final Logger LOG = LoggerFactory.getLogger( OsProcessLauncher.class );
    private final List<String> commandWithArguments;
 
-   public OsProcessLauncher( final List<String> commandWithArguments ) {
-      this.commandWithArguments = commandWithArguments;
+   public OsProcessLauncher( final List<String> commandWithArguments, final boolean diableWarning ) {
+      if ( diableWarning ) {
+         // Temporary disable warning messages from the output error stream until https://github.com/oracle/graal/issues/12623 is resolved
+         // Delete these two arguments in github actions too
+         List<String> modifiedCommand = new ArrayList<>( commandWithArguments );
+         modifiedCommand.add( 1, "--enable-native-access=ALL-UNNAMED" );
+         modifiedCommand.add( 2, "--sun-misc-unsafe-memory-access=allow" );
+         this.commandWithArguments = modifiedCommand;
+      } else {
+         this.commandWithArguments = commandWithArguments;
+      }
    }
 
    protected File workingDirectoryForSubprocess( final ExecutionContext context ) {
